src/todo-list/todo.css
/* Global */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Color Theme */
:root {
  --one: rgba(140, 43, 114, 1);
  --two: rgba(3, 103, 165, 1);
  --three: rgba(1, 55, 89, 1);
  --four: rgba(3, 119, 165, 1);
  --five: rgba(242, 115, 4, 1);
}

/* Body */
body {
  width: 100vw;
  height: 100vh;
  background: var(--three)
}

.wrapper {
  width: 60vw;
  height: 80vh;
  margin: 35px auto;
  font-family: 'Open Sans', sans-serif;
  background:  rgba(140, 43, 114, .7);
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.top {
  width: 100%;
  height: 15vh;
  background: var(--two);
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px 10px 0 0;
}

.top h1 {
  width: 100%;
  font-size: 2.75em;
  color: var(--four);
  padding: 10px;
  background: rgba(242, 115, 4, .7);
  border-radius: 10px;
  align-self: center;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.top input[type="text"] {
  width: 20vw;
  font-size: .75em;
  background: rgba(1, 55, 89, .8);
  outline: none;
  border: 3px solid var(--three);
  border-radius: 10px;
  color: rgb(173, 173, 173);
}

.form {
  width: 100%;
  height: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgba(242, 115, 4, .3);
}

.form input[type="text"] {
  background: rgba(1, 55, 89, .8);
  outline: none;
  border: 3px solid var(--three);
  color: rgb(173, 173, 173);
}

.form_text {
  font-size: 2.25em;
  border-radius: 10px;
}

.form_button {
  font-size: 1.85em;
  background: var(--two);
  color: var(--five);
  border: 6px solid var(--two);
  border-radius: 10px;
}

.list {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.list .u_list {
  margin-top: 20px;
}

.list li {
  width: 100%;
  list-style: none;
  font-size: 2.25em;
  padding: 10px 50px;
  margin-bottom: 10px;
  background: var(--four);
  border-radius: 10px;
  display: flex;
  justify-content: space-between;
} 

.list .btn {
  margin-left: 30px;
  height: 50px;
  background: rgba(242, 115, 4, .7);
  border: none; 
  border-radius: 7px;
  color: white;
  font-size: .5em;
  padding: 0 20px 0 20px;
}

.list .u_list .hidden-styler {
  display: none;  
}

